add pag cart and insert nav

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,7 +10,7 @@
         <ion-title>Linx Moda Shop</ion-title>
 
         <ion-buttons end>
-            <button ion-button icon-only color="primary">
+            <button ion-button icon-only color="primary" (click)="goToCartPage()">
                 <ion-icon class="lx lx-basket"></ion-icon>
             </button>
         </ion-buttons>
