--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,6 +12,7 @@
         <ion-buttons end>
             <button ion-button icon-only color="primary" (click)="goToCartPage()">
                 <ion-icon class="lx lx-basket"></ion-icon>
+                <ion-badge id="notifications-badge" color="danger">5</ion-badge>
             </button>
         </ion-buttons>
 
