--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,15 +21,17 @@
 
 <ion-content>
 
-    <ion-slides autoplay="5000" class="banners" style="height: 30vh;">
+    <ion-slides autoplay="5000" class="banners" style="height: 33vh;">
         <ion-slide style="background-color: green"></ion-slide>
         <ion-slide style="background-color: blue"></ion-slide>
         <ion-slide style="background-color: red"></ion-slide>
     </ion-slides>
 
     <div *ngFor="let category of categories">
+
         <h2 color="primary">{{category.name}}</h2>
-        <ion-slides autoplay="5000" centeredSlides="true" spaceBetween="30" style="height: 30vh;" *ngIf="category.products">
+
+        <ion-slides autoplay="5000" slidesPerView="auto" centeredSlides="true" spaceBetween="30" initialSlide="1" style="height: 33vh;" *ngIf="category.products">
             <ion-slide *ngFor="let product of category.products" (tap)="viewProduct(product._id)">
                 <img [src]="'http://45.55.238.48:8000/img/' + product.imagePath" />
             </ion-slide>
