--- a/src/pages/view-product/view-product.html
+++ b/src/pages/view-product/view-product.html
@@ -11,11 +11,50 @@
 <ion-content padding>
 
     <div *ngIf="product">
-        {{product.name}}
-        <img [src]="'http://45.55.238.48:8000/img/' + product.imagePath" />
-        <button ion-button full color="primary" (click)="addToCart(product)"> add to cart </button>
+        <ion-grid>
+            <ion-row>
+                <ion-col col-6>
+                    <h1 class="product-name"> {{product.name}} </h1>
+                </ion-col>
+                <ion-col padding col-6 text-right>
+                    <ion-icon name="star"> {{product.rating}} </ion-icon>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col col-12>
+                    <img [src]="'http://45.55.238.48:8000/img/' + product.imagePath" />
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col col-12>
+                    Color:
+
+
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col col-12>
+                    Size
+                </ion-col>
+            </ion-row>
+
+            <ion-row>
+                <ion-col col-12>
+                    <p> Product Code : <strong>{{product._id}}</strong></p>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+
     </div>
+
+
     <div *ngIf="!product" class="loading">
         <ion-spinner name="crescent"></ion-spinner>
     </div>
 </ion-content>
+
+<ion-footer color="primary" (click)="addToCart(product)">
+    <ion-toolbar>
+        add to cart
+    </ion-toolbar>
+</ion-footer>
