--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -29,13 +29,19 @@
 
     <div *ngFor="let category of categories">
 
-        <h2 color="primary">{{category.name}}</h2>
+        <h2 class="">{{category.name}}</h2>
 
-        <ion-slides autoplay="5000" slidesPerView="auto" centeredSlides="true" spaceBetween="30" initialSlide="1" style="height: 33vh;" *ngIf="category.products">
-            <ion-slide *ngFor="let product of category.products" (tap)="viewProduct(product._id)">
+        <ion-slides slidesPerView="auto" centeredSlides="true" spaceBetween="15" initialSlide="1" style="height: 30vh;" *ngIf="category.products">
+            <ion-slide *ngFor="let product of category.products" (tap)="selectProduct($event, product._id)">
                 <img [src]="'http://45.55.238.48:8000/img/' + product.imagePath" />
             </ion-slide>
         </ion-slides>
     </div>
 
 </ion-content>
+
+<ion-footer color="primary" [ngClass]="{ 'visible': !!selected }" (tap)="viewProduct()">
+    <ion-toolbar>
+        View Details
+    </ion-toolbar>
+</ion-footer>
