--- a/src/pages/view-product/view-product.html
+++ b/src/pages/view-product/view-product.html
@@ -34,7 +34,7 @@
             </ion-row>
             <ion-row>
                 <ion-col col-12>
-                    Size
+                   <strong class="product-name"> Size </strong> Size
                 </ion-col>
             </ion-row>
 
