--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -6,9 +6,12 @@
 -->
 <ion-content>
     <ion-slides pager autoplay="5000">
-        <ion-slide style="background-color: green"></ion-slide>
-        <ion-slide style="background-color: blue"></ion-slide>
-        <ion-slide style="background-color: red"></ion-slide>
+        <ion-slide style="background: url(http://45.55.238.48:8000/img/camiseta2.jpg);">
+        </ion-slide>
+        <ion-slide style="background: url(http://45.55.238.48:8000/img/camiseta1.jpg);">
+        </ion-slide>
+        <ion-slide style="background: url(http://45.55.238.48:8000/img/camiseta3.jpg);">
+        </ion-slide>
     </ion-slides>
 
     <div class="login" padding>
