--- a/src/pages/view-product/view-product.html
+++ b/src/pages/view-product/view-product.html
@@ -1,15 +1,8 @@
-<!--
-  Generated template for the ViewProductPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header color="light">
     <ion-navbar color="light"></ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
     <div *ngIf="product">
         <ion-grid>
             <ion-row>
@@ -19,7 +12,7 @@
                     </h1>
                 </ion-col>
                 <ion-col padding col-4 text-right>
-                    <ion-icon name="star"> {{product.rating}} </ion-icon>
+                    <ion-icon name="star-outline" class="rating"> {{product.rating}} </ion-icon>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -29,14 +22,14 @@
             </ion-row>
             <ion-row>
                 <ion-col col-12 class="product-datails">
-                    <h3 class="product-sku product-name"> Color: </h3>
+                    <p class="product-sku product-name"> Color: </p>
 
                     <span *ngFor="let color of colors" class="product-sku__color__{{color}}" [ngClass]="{'product-sku__color--active' : selectedColor === color}" (click)="selectColor(color)"></span>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col col-12 class="product-datails">
-                    <h3 class="product-sku product-name"> Size </h3>
+                    <p class="product-sku product-name"> Size </p>
 
                     <span *ngFor="let size of product.sizes; let i = index" class="product-sku__size" [ngClass]="{'product-sku__size--active' : selectedSize === i }" (click)="selectSize(i)"> {{size}} </span>
                 </ion-col>
@@ -50,9 +43,7 @@
                 </ion-col>
             </ion-row>
         </ion-grid>
-
     </div>
-
 
     <div *ngIf="!product" class="loading">
         <ion-spinner name="crescent"></ion-spinner>
