--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -25,7 +25,19 @@
         </dd>
     </dl> -->
 
+    <ion-item>
+        <ion-grid>
+            <ion-row>
+                <ion-col col-6>
+                    <h1 class="product-name"> Cesta :</h1>
+                </ion-col>
+                <ion-col col-6>
+                    teste2
+                </ion-col>
 
+            </ion-row>
+        </ion-grid>
+    </ion-item>
     <ion-list>
         <ion-item-sliding *ngFor="let item of items">
 
