--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar color="light">
 
-        <ion-buttons start>
+        <ion-buttons left>
             <button ion-button icon-only color="primary">
                 <ion-icon name="menu"></ion-icon>
             </button>
