--- a/src/pages/view-product/view-product.html
+++ b/src/pages/view-product/view-product.html
@@ -1,5 +1,11 @@
 <ion-header color="light">
-    <ion-navbar color="light"></ion-navbar>
+    <ion-toolbar color="light">
+        <ion-buttons left>
+            <ion-navbar color="light"></ion-navbar>
+        </ion-buttons>
+
+        <ion-title>Linx Moda Shop</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
