--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
     <ion-toolbar color="light">
-        <ion-buttons start>
+        <ion-buttons left>
             <button ion-button icon-only color="primary" (click)="goToHomePage()">
                 <ion-icon name="home"></ion-icon>
           </button>
