--- a/src/pages/view-product/view-product.html
+++ b/src/pages/view-product/view-product.html
@@ -27,6 +27,11 @@
                 </ion-col>
             </ion-row>
             <ion-row>
+                <ion-col col-8>
+                    <p class="product-sku product-name"> Preço: {{product.price}} </p>
+                </ion-col>
+            </ion-row>
+            <ion-row>
                 <ion-col col-12 class="product-datails">
                     <p class="product-sku product-name"> Color: </p>
 
