pipe currency price

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
             </button>
         </ion-buttons>
 
-        <ion-title>Linx Moda Shop</ion-title>
+        <ion-title>Linx eShop</ion-title>
 
         <ion-buttons end>
             <button ion-button icon-only color="primary" (click)="goToCartPage()">
@@ -49,6 +49,6 @@
 
 <ion-footer color="primary" [ngClass]="{ 'visible': !!selected }" (tap)="viewProduct()">
     <ion-toolbar>
-        View Details
+        Ver Detalhes
     </ion-toolbar>
 </ion-footer>
