--- a/src/pages/view-product/view-product.html
+++ b/src/pages/view-product/view-product.html
@@ -28,7 +28,7 @@
             </ion-row>
             <ion-row>
                 <ion-col col-8>
-                    <p class="product-sku product-name"> Preço: {{product.price}} </p>
+                    <p class="product-sku product-name"> Preço: <strong> {{product.price | currency:'BRL':true}} </strong> </p>
                 </ion-col>
             </ion-row>
             <ion-row>
