--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,11 @@
 <ion-header>
     <ion-toolbar color="light">
 
-        <ion-buttons start>
+        <!-- <ion-buttons start>
             <button ion-button icon-only color="primary">
                 <ion-icon name="menu"></ion-icon>
             </button>
-        </ion-buttons>
+        </ion-buttons> -->
 
         <ion-title>Linx Moda Shop</ion-title>
 
