--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -57,7 +57,7 @@
         </ion-item-sliding>
     </ion-list>
 
-    <button ion-button full color="danger" (click)="cleanCart(product)"> Limpar Carrinho </button>
+    <button ion-button full color="secondary" (click)="cleanCart(product)"> Limpar Carrinho </button>
     <button ion-button full color="primary" (click)="goToHomePage()"> Finalizar Compra </button>
 
 
