--- a/src/pages/view-product/view-product.html
+++ b/src/pages/view-product/view-product.html
@@ -4,7 +4,7 @@
             <ion-navbar color="light"></ion-navbar>
         </ion-buttons>
 
-        <ion-title>Linx Moda Shop</ion-title>
+        <!-- <ion-title>Linx Moda Shop</ion-title> -->
     </ion-toolbar>
 </ion-header>
 
