--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,7 +12,7 @@
         <ion-buttons end>
             <button ion-button icon-only color="primary" (click)="goToCartPage()">
                 <ion-icon class="lx lx-basket"></ion-icon>
-                <ion-badge id="notifications-badge" color="danger">{{ items }}</ion-badge>
+                <!-- <ion-badge id="notifications-badge" color="danger">{{ items | async }}</ion-badge> -->
             </button>
         </ion-buttons>
 
