--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -11,7 +11,7 @@
                 <ion-icon name="home"></ion-icon>
           </button>
         </ion-buttons>
-        <ion-title>Linx Moda Shop</ion-title>
+        <ion-title>Linx eShop</ion-title>
     </ion-toolbar>
 </ion-header>
 
