--- a/src/pages/view-product/view-product.html
+++ b/src/pages/view-product/view-product.html
@@ -3,8 +3,7 @@
         <ion-buttons left>
             <ion-navbar color="light"></ion-navbar>
         </ion-buttons>
-
-        <!-- <ion-title>Linx Moda Shop</ion-title> -->
+        <ion-title>Linx eShop</ion-title>
     </ion-toolbar>
 </ion-header>
 
