--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -51,7 +51,7 @@
         </ion-item-sliding>
     </ion-list>
 
-    <button ion-button full color="secondary" (click)="cleanCart(product)" *ngIf="items.length"> Limpar Carrinho </button>
+    <button ion-button full color="secondary" (click)="cleanCart(product)" *ngIf="items.list.length"> Limpar Carrinho </button>
     <button ion-button full color="primary" (click)="goToHomePage()"> Finalizar Compra </button>
   </div>
 
